Revert "Java 21"
This reverts commit 85892fe15bb2032a1bebcb8c003a1255ba1dbb63.